objects/CS_DraftFAQBusSubEntityValues__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Pick List Values for Business Sub Entity on Draft FAQ</description>
    <fields>
        <fullName>Business_Entity__c</fullName>
        <label>Business Entity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>CS_DraftFAQBusSubEntityValues</label>
</CustomObject>